--- a/package.json
+++ b/package.json
@@ -59,11 +59,12 @@
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "react-redux": "^8.0.2",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-form": "^8.3.10",
+    "redux-thunk": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
