--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
+    "react-animate-height": "^3.2.3",
     "react-dom": "16.13.1",
     "react-redux": "^8.0.2",
     "react-router": "5.1.2",
